add datatime [master]

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="navBox">
     <div class="boxCon">
         <ul class="nav">
-            <li><a href="#part1Tit" class="nav1" id="nav1">课程优势</a></li>
+            <li><a href="#part1Tit" class="nav1" id="nav1">课程优势master20160425</a></li>
 
             <li><a href="#part2Tit" class="nav2" id="nav2">免费试听</a></li>
             <li><a href="#part3Tit" class="nav3" id="nav3">套课推荐<i class="new"></i></a></li>
