--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="nav">
             <li><a href="#part1Tit" class="nav1" id="nav1">课程优势</a></li>
 
-            <li><a href="#part2Tit" class="nav2" id="nav2">免费试听</a></li>
+            <li><a href="#part2Tit" class="nav2" id="nav2">免费试听testing20160426</a></li>
             <li><a href="#part3Tit" class="nav3" id="nav3">套课推荐<i class="new"></i></a></li>
             <li><a href="#part4Tit" class="nav4" id="nav4">精品课程<i class="hot"></i></a></li>
             <li><a href="#part5Tit" class="nav5" id="nav5">特惠班</a></li>
