--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-<div class="bannerBox">
+<div class="bannerBox"><p>creating a new branch quick and simple</p>
     <div class="bannerCon">
         <img src="http://pic4.ablesky.cn/content/pic/album/2016/01/21/c64a7642-5431-4311-8951-510f0bbe10dd.jpg" alt=""/>
 
