--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="bannerBox">
+<p>creating a new branch is quick&simple</p>
     <div class="bannerCon">
         <img src="http://pic4.ablesky.cn/content/pic/album/2016/01/21/c64a7642-5431-4311-8951-510f0bbe10dd.jpg" alt=""/>
 
